@@ -91,11 +91,7 @@ public:
 extern rConsole sr_con; // where all the output is directed to
 
 #ifdef DEDICATED
-// read from sr_input
-extern FILE *sr_input;
-void sr_Unblock_stdin();
 void sr_Read_stdin();
-void sr_Close_stdin();
 #endif
 
 class rForceTextCallback:public tCallbackOr{
